docs/pages/versions/v55.0.0/sdk/ui/jetpack-compose/datetimepicker.mdx
---
title: DateTimePicker
description: 一个用于选择日期和时间的 Jetpack Compose DateTimePicker 组件。
sourceCodeUrl: 'https://github.com/expo/expo/tree/main/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';

Expo UI DateTimePicker 与官方 Jetpack Compose [日期选择器](https://developer.android.com/develop/ui/compose/components/datepickers) 和 [时间选择器](https://developer.android.com/develop/ui/compose/components/time-pickers) API 保持一致，并支持日期、时间以及组合选择。

## 安装

<APIInstallSection />

## 用法

### 日期选择器

```tsx DatePickerExample.tsx
import { useState } from 'react';
import { Host, DateTimePicker } from '@expo/ui/jetpack-compose';

export default function DatePickerExample() {
  const [selectedDate, setSelectedDate] = useState(new Date());

  return (
    <Host matchContents>
      <DateTimePicker
        onDateSelected={date => {
          setSelectedDate(date);
        }}
        displayedComponents="date"
        initialDate={selectedDate.toISOString()}
        variant="picker"
      />
    </Host>
  );
}
```

### 时间选择器

```tsx TimePickerExample.tsx
import { useState } from 'react';
import { Host, DateTimePicker } from '@expo/ui/jetpack-compose';

export default function TimePickerExample() {
  const [selectedDate, setSelectedDate] = useState(new Date());

  return (
    <Host matchContents>
      <DateTimePicker
        onDateSelected={date => {
          setSelectedDate(date);
        }}
        displayedComponents="hourAndMinute"
        initialDate={selectedDate.toISOString()}
        variant="picker"
      />
    </Host>
  );
}
```

### 输入变体

使用 `variant="input"` 将选择器显示为文本输入字段，而不是默认的选择器 UI。

```tsx InputVariantExample.tsx
import { useState } from 'react';
import { Host, DateTimePicker } from '@expo/ui/jetpack-compose';

export default function InputVariantExample() {
  const [selectedDate, setSelectedDate] = useState(new Date());

  return (
    <Host matchContents>
      <DateTimePicker
        onDateSelected={date => {
          setSelectedDate(date);
        }}
        displayedComponents="date"
        initialDate={selectedDate.toISOString()}
        variant="input"
      />
    </Host>
  );
}
```

## API

```tsx
import { DateTimePicker } from '@expo/ui/jetpack-compose';
```

<APISection packageName="expo-ui/jetpack-compose/datetimepicker" apiName="DateTimePicker" />
