docs/pages/versions/v56.0.0/sdk/ui/jetpack-compose/datetimepicker.mdx
---
title: 日期时间选择器
description: 一个用于选择日期和时间的 Jetpack Compose 日期时间选择器组件。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-56/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI DateTimePicker 与官方 Jetpack Compose [日期选择器](https://developer.android.com/develop/ui/compose/components/datepickers) 和 [时间选择器](https://developer.android.com/develop/ui/compose/components/time-pickers) API 保持一致，并支持日期、时间以及组合选择。

> **注意：** 日期变体会渲染 Material 的日历网格和输入字段，这两者都会在内部水平滚动。父级 `Host` 必须在水平方向提供有限宽度，请将 `matchContents={{ vertical: true }}` 与 `style={{ width: '100%' }}` 一起使用（或任何有限宽度）。有关详细信息，请参阅 [Host 参考中的匹配内容](host/#match-contents)。

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/datetimepicker/android-light.webp"
  darkSrc="/static/images/expo-ui/datetimepicker/android-dark.webp"
  alt="Material 3 日期选择器在日历网格中显示已选日期"
/>

## 安装

<APIInstallSection />

## 用法

### 日期选择器

```tsx DatePickerExample.tsx
import { useState } from 'react';
import { Host, DateTimePicker } from '@expo/ui/jetpack-compose';

export default function DatePickerExample() {
  const [selectedDate, setSelectedDate] = useState(new Date());

  return (
    <Host matchContents={{ vertical: true }} style={{ width: '100%' }}>
      <DateTimePicker
        onDateSelected={date => {
          setSelectedDate(date);
        }}
        displayedComponents="date"
        initialDate={selectedDate.toISOString()}
        variant="picker"
      />
    </Host>
  );
}
```

### 时间选择器

```tsx TimePickerExample.tsx
import { useState } from 'react';
import { Host, DateTimePicker } from '@expo/ui/jetpack-compose';

export default function TimePickerExample() {
  const [selectedDate, setSelectedDate] = useState(new Date());

  return (
    <Host matchContents={{ vertical: true }} style={{ width: '100%' }}>
      <DateTimePicker
        onDateSelected={date => {
          setSelectedDate(date);
        }}
        displayedComponents="hourAndMinute"
        initialDate={selectedDate.toISOString()}
        variant="picker"
      />
    </Host>
  );
}
```

### 输入变体

使用 `variant="input"` 会将选择器显示为文本输入字段，而不是默认的选择器 UI。

```tsx InputVariantExample.tsx
import { useState } from 'react';
import { Host, DateTimePicker } from '@expo/ui/jetpack-compose';

export default function InputVariantExample() {
  const [selectedDate, setSelectedDate] = useState(new Date());

  return (
    <Host matchContents={{ vertical: true }} style={{ width: '100%' }}>
      <DateTimePicker
        onDateSelected={date => {
          setSelectedDate(date);
        }}
        displayedComponents="date"
        initialDate={selectedDate.toISOString()}
        variant="input"
      />
    </Host>
  );
}
```

## API

```tsx
import { DateTimePicker } from '@expo/ui/jetpack-compose';
```

<APISection packageName="expo-ui/jetpack-compose/datetimepicker" apiName="DateTimePicker" />
